# domaindriven

./: .gitignore  CLAUDE.md  ChangeLog.md  README.md  cabal.project  domain-driven.cabal  flake.nix  fourmolu.yaml  hie.yaml  package.yaml  run-ghcid.sh  sketch.txt  stack.yaml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: main.yaml
bench/: Action.hs  Main.hs
bench/Benchmark/: PostgresIORefState.hs
benchmark/bench/: Action.hs  Main.hs
domaindriven/: LICENSE  domaindriven.cabal  package.yaml
domaindriven-core/: README.md  domaindriven-core.cabal  package.yaml
domaindriven-core/src/Data/: ShapeCoerce.hs
domaindriven-core/src/DomainDriven/Persistance/: Class.hs  ForgetfulInMemory.hs  Postgres.hs
domaindriven-core/src/DomainDriven/Persistance/Postgres/: Internal.hs  Migration.hs  Types.hs
domaindriven-core/test/DomainDriven/Persistance/: PostgresIORefStateSpec.hs  PostgresSpec.hs
domaindriven-core/test/DomainDriven/Persistance/Postgres/: TypesSpec.hs
domaindriven-effectful/: ChangeLog.md  IMPLEMENTATION.md  README.md  domaindriven-effectful.cabal  package.yaml
domaindriven-effectful-examples/: README.md  domaindriven-effectful-examples.cabal  intro.txt  package.yaml
domaindriven-effectful-examples/fieldname-as-path/: Main.hs
domaindriven-effectful-examples/hierarchical/: Main.hs
domaindriven-effectful-examples/hierarchical-simplified/: Main.hs
domaindriven-effectful-examples/postgres/: EventMigration.hs  Main.hs
domaindriven-effectful-examples/postgres/Event/: V1.hs  V2.hs
domaindriven-effectful-examples/simple/: Main.hs
domaindriven-effectful-examples/simple-named/: Main.hs
domaindriven-effectful-examples/simple-with-helpers/: Main.hs
domaindriven-effectful/src/DomainDriven/: Effectful.hs  FieldNameAsPath.hs
domaindriven-effectful/src/DomainDriven/Effectful/: Aggregate.hs  Domain.hs  Helpers.hs  Interpreter.hs  Projection.hs
domaindriven-effectful/src/DomainDriven/Effectful/Interpreter/: InMemory.hs  Postgres.hs
domaindriven-effectful/src/Servant/Auth/Internal/ThrowAll/: SOP.hs
domaindriven-effectful/test/: Spec.hs
domaindriven-effectful/test/DomainDriven/Effectful/: InMemorySpec.hs
domaindriven-examples/: README.md  domaindriven-examples.cabal  intro.txt  package.yaml
domaindriven-examples/counter/: Main.hs
domaindriven-examples/fieldname-as-path/: Main.hs
domaindriven-examples/generic/: Counter.hs  Main.hs  ServantPatch.hs
domaindriven-examples/hierarchical/: Main.hs
domaindriven-examples/postgres/: EventMigration.hs  Main.hs
domaindriven-examples/postgres/Event/: V2.hs
domaindriven-examples/simple/: Counter.hs  Main.hs
domaindriven-examples/store/: Main.hs  Store.hs
domaindriven-server/: domaindriven-server.cabal  package.yaml
domaindriven-server/src/: DomainDriven.hs
domaindriven-server/src/DomainDriven/: Server.hs
domaindriven-server/src/DomainDriven/Server/: Class.hs  Config.hs  Helpers.hs  Param.hs  TH.hs  Types.hs
domaindriven-server/src/DomainDriven/Server/Internal/: Class.hs
domaindriven-server/test/DomainDriven/: ServerSpec.hs
domaindriven-server/test/DomainDriven/Persistance/: PostgresIORefStateSpec.hs
domaindriven/src/: DomainDriven.hs
domaindriven/src/DomainDriven/: Aggregate.hs  Domain.hs  FieldNameAsPath.hs  Interpreter.hs  Projection.hs  Server.hs
domaindriven/src/DomainDriven/Internal/: Class.hs
domaindriven/src/DomainDriven/Persistance/: ForgetfulInMemory.hs
domaindriven/src/DomainDriven/Persistance/Postgres/: Internal.hs  Migration.hs  Types.hs
domaindriven/src/DomainDriven/Server/: Api.hs  Class.hs  Config.hs  DomainDrivenApi.hs  MapModel.hs  Servant.hs  Server.hs  TH.hs  TaggedSumOfApis.hs  Types.hs
domaindriven/src/DomainDriven/Server/Helper/: GenericRecord.hs
domaindriven/src/DomainDriven/Server/Servant/: Api.hs  MangledPathSegment.hs  MapModel.hs  Server.hs  TaggedSumOfApis.hs  UnionOfApis.hs
domaindriven/src/DomainDriven/Server/Servant/Helper/: GenericRecord.hs
domaindriven/src/Servant/Auth/Internal/ThrowAll/: SOP.hs
domaindriven/test/Action/: Counter.hs  ExtraParam.hs  ServerTest.hs  Store.hs
domaindriven/test/DomainDriven/: InMemorySpec.hs  ServerSpec.hs  ServerSpecModel.hs
domaindriven/test/DomainDriven/Internal/: NamedJsonFieldsSpec.hs
domaindriven/test/DomainDriven/Persistance/: PostgresIORefStateSpec.hs
domaindriven/test/Models/: Counter.hs  Store.hs
examples/hierarchical/: Main.hs
examples/simple/: Action.hs  App.hs  Main.hs
examples/store/: Main.hs
models/Models/: Counter.hs  Store.hs
shape-coerce/: shape-coerce.cabal
skills/domaindriven/: SKILL.md  event-design.md  project-setup.md
specs/: effectful.md  generalized-read-model.md
src/: DomainDriven.hs
src/DomainDriven/: Config.hs  FancyTuple.hs  Server.hs
src/DomainDriven/Internal/: Class.hs  HasFieldName.hs  HasParamName.hs  JsonFieldName.hs  NamedFields.hs  NamedJsonFields.hs  Text.hs  WithNamedField.hs
src/DomainDriven/Internal/Storage/: File.hs  STM.hs
src/DomainDriven/Persistance/: FileAndSTM.hs  FileWithSTM.hs  ForgetfulInMemory.hs  ForgetfulSTM.hs  Postgres.hs  PostgresIORefState.hs
src/DomainDriven/Persistance/Postgres/: Internal.hs  Migration.hs  Types.hs
src/DomainDriven/Server/: Helpers.hs  TH.hs  Types.hs
test/: ServerSpec.hs  Spec.hs  StoreModel.hs
test/DomainDriven/: ServerOptions.hs  ServerSpec.hs  ServerSpecModel.hs
test/DomainDriven/Internal/: NamedJsonFieldsSpec.hs  WithNamedFieldSpec.hs
test/DomainDriven/Persistance/: FileWithSTMSpec.hs  ForgetfulSTMSpec.hs  PostgresIORefStateSpec.hs  PostgresSpec.hs
