cabal-version: 3.12

name:           domaindriven-core
version:        0.5.0
synopsis:       Batteries included event sourcing and CQRS
description:    Please see the README on GitHub at <https://github.com/tommyengstrom/domaindriven#readme>
category:       Web
homepage:       https://github.com/tommyengstrom/domaindriven#readme
bug-reports:    https://github.com/tommyengstrom/domaindriven/issues
author:         Tommy Engström
maintainer:     tommy@succinct.se
copyright:      2025 Tommy Engström
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/domaindriven

common default_opts
  default-language: Haskell2010
  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedLabels
      AllowAmbiguousTypes
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wincomplete-patterns
    -Wunused-packages
    -Wno-missing-import-lists

library
  import: default_opts
  exposed-modules:
      Data.ShapeCoerce
      DomainDriven.Persistance.Class
      DomainDriven.Persistance.ForgetfulInMemory
      DomainDriven.Persistance.Postgres
      DomainDriven.Persistance.Postgres.Internal
      DomainDriven.Persistance.Postgres.Migration
      DomainDriven.Persistance.Postgres.Types
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base
    , containers
    , deepseq
    , exceptions
    , generic-lens
    , hashable
    , microlens
    , mtl
    , postgresql-simple
    , random
    , resource-pool
    , streamly
    , streamly-core
    , text
    , time
    , unliftio
    , unordered-containers
    , uuid
  default-language: Haskell2010

test-suite domaindriven-core-test
  import: default_opts
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  other-modules:
      DomainDriven.Persistance.PostgresSpec
      DomainDriven.Persistance.Postgres.TypesSpec
  hs-source-dirs:
      test
  build-depends:
      aeson
    , base
    , containers
    , domaindriven-core
    , hspec
    , postgresql-simple
    , streamly
    , text
    , time
    , unliftio
    , unliftio-pool
    , uuid
