cabal-version: 3.12
name:           domaindriven-effectful
version:        0.5.0
synopsis:       Batteries included event sourcing and CQRS
description:    Please see the README on GitHub at <https://github.com/tommyengstrom/domaindriven#readme>
category:       Web
homepage:       https://github.com/tommyengstrom/domaindriven#readme
bug-reports:    https://github.com/tommyengstrom/domaindriven/issues
author:         Tommy Engström
maintainer:     tommy@tommyengstrom.com
copyright:      2023 Tommy Engström
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/domaindriven

common shared_opts
  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedLabels
      AllowAmbiguousTypes
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
  ghc-options: 
    -Wall 
    -Werror 
    -Wcompat 
    -Widentities 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wpartial-fields 
    -Wredundant-constraints 
    -Wincomplete-record-updates 
    -Wincomplete-patterns 
    -Wunused-packages 
    -Wno-missing-import-lists 
    -fplugin=Effectful.Plugin
  default-language: Haskell2010

library
  import: shared_opts
  exposed-modules:
      DomainDriven.Effectful
      DomainDriven.Effectful.Aggregate
      DomainDriven.Effectful.Domain
      DomainDriven.Effectful.Interpreter.InMemory
      DomainDriven.Effectful.Interpreter.Postgres
      DomainDriven.Effectful.Projection
      DomainDriven.FieldNameAsPath
      Servant.Auth.Internal.ThrowAll.SOP
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base
    , bytestring
    , domaindriven-core
    , effectful-core
    , effectful-plugin
    , effectful-th
    , generics-sop
    , hashable
    , openapi3
    , servant-auth-server
    , servant-client-core
    , servant-openapi3
    , servant-server
    , text

test-suite domaindriven-effectful-test
  import: shared_opts
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  other-modules:
    DomainDriven.Effectful.InMemorySpec
  hs-source-dirs:
    test
  build-depends:
      base
    , domaindriven-core
    , domaindriven-effectful
    , effectful-core
    , effectful-plugin
    , hspec
