cabal-version: 3.12

name:           domaindriven-examples
version:        0.5.0
synopsis:       Examples for domaindriven
description:    Examples demonstrating the domaindriven library
category:       Web
homepage:       https://github.com/tommyengstrom/domaindriven#readme
bug-reports:    https://github.com/tommyengstrom/domaindriven/issues
author:         Tommy Engström
maintainer:     tommy@tommyengstrom.com
copyright:      2025 Tommy Engström
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/domaindriven

common shared_opts
  default-extensions:
      BlockArguments
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedLabels
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
  default-language: Haskell2010
  ghc-options: 
    -Wall 
    -Werror 
    -Wcompat 
    -Widentities 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wpartial-fields 
    -Wredundant-constraints 
    -Wincomplete-patterns 
    -Wno-unused-packages 
    -Wno-partial-fields 
    -fplugin=Effectful.Plugin 
    -threaded 
    -rtsopts 
    -with-rtsopts=-N

executable postgres-example
  import: shared_opts
  main-is: Main.hs
  other-modules:
      Event.V1
      Event.V2
      EventMigration
  hs-source-dirs:
      postgres
  build-depends:
      aeson
    , base
    , domaindriven-core
    , domaindriven
    , effectful
    , effectful-core
    , effectful-plugin
    , postgresql-simple
    , shape-coerce
    , servant
    , servant-server
    , warp

executable simple-example
  import: shared_opts
  main-is: Main.hs
  hs-source-dirs:
      simple
  build-depends:
      aeson
    , base
    , domaindriven-core
    , domaindriven
    , effectful
    , effectful-core
    , effectful-plugin
    , servant
    , servant-server
    , time
    , uuid
    , warp

executable fieldname-as-path-example
  import: shared_opts
  main-is: Main.hs
  hs-source-dirs:
      fieldname-as-path
  build-depends:
      aeson
    , base
    , domaindriven-core
    , domaindriven
    , effectful
    , effectful-core
    , effectful-plugin
    , servant
    , servant-server
    , warp
