cabal-version: 3.12
name:           domaindriven
version:        0.5.0
synopsis:       Batteries included event sourcing and CQRS
description:    Please see the README on GitHub at <https://github.com/tommyengstrom/domaindriven#readme>
category:       Web
homepage:       https://github.com/tommyengstrom/domaindriven#readme
bug-reports:    https://github.com/tommyengstrom/domaindriven/issues
author:         Tommy Engström
maintainer:     tommy@tommyengstrom.com
copyright:      2023 Tommy Engström
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/domaindriven

common shared_opts
  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedLabels
      AllowAmbiguousTypes
      BlockArguments
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
  ghc-options: 
    -Wall 
    -Werror 
    -Wcompat 
    -Widentities 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wpartial-fields 
    -Wredundant-constraints 
    -Wincomplete-record-updates 
    -Wincomplete-patterns 
    -Wunused-packages 
    -Wno-missing-import-lists 
    -fplugin=Effectful.Plugin
  default-language: Haskell2010

library
  import: shared_opts
  exposed-modules:
      DomainDriven
      DomainDriven.Aggregate
      DomainDriven.Domain
      DomainDriven.Interpreter
      DomainDriven.Projection
      DomainDriven.FieldNameAsPath
      Servant.Auth.Internal.ThrowAll.SOP
  hs-source-dirs:
      src
  build-depends:
      base
    , bytestring
    , domaindriven-core
    , effectful-core
    , effectful-plugin
    , effectful-th
    , generics-sop
    , openapi3
    , servant-auth-server
    , servant-client-core
    , servant-openapi3
    , servant-server
    , text

test-suite domaindriven-test
  import: shared_opts
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover
  other-modules:
    DomainDriven.InMemorySpec
  hs-source-dirs:
    test
  build-depends:
      base
    , domaindriven-core
    , domaindriven
    , effectful-core
    , effectful-plugin
    , hspec
