cabal-version: 3.12

name:           shape-coerce
version:        0.5.0
synopsis:       Generic coercion between types with the same shape
description:    A general-purpose generic coercion utility that allows converting between
                types that share the same structure (constructors, fields) but differ in
                module or package origin.
category:       Generics
homepage:       https://github.com/tommyengstrom/domaindriven#readme
bug-reports:    https://github.com/tommyengstrom/domaindriven/issues
author:         Tommy Engström
maintainer:     tommy@succinct.se
copyright:      2025 Tommy Engström
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/tommyengstrom/domaindriven

common default_opts
  default-language: Haskell2010
  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedLabels
      AllowAmbiguousTypes
      BlockArguments
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wincomplete-patterns
    -Wunused-packages
    -Wno-missing-import-lists

library
  import: default_opts
  exposed-modules:
      Data.ShapeCoerce
  hs-source-dirs:
      src
  build-depends:
      base
    , containers
